tests/script_errors/string_interpolation_extractor/error.txt
Error: 
    1 | " #{ | } "
      |      ^^^^^ It looks like you forgot to terminate an extractor with a closing '|'